--- a/Projekt/style.css
+++ b/Projekt/style.css
@@ -33,6 +33,11 @@
   margin-left: 15%;
   margin-right: 15%;
 }
+.CenterBox2{
+  padding-left: 8%;
+  margin-left: 15%;
+  margin-right: 15%;
+}
 h3{
   font-family: 'Comic Sans MS', cursive, sans-serif;
   font-weight: 700;
